# SATG

./: .coveragerc  .gitignore  AUDIT_REPORT.md  CLAUDE.md  SATG_STRUCTURAL_EXTENSION_AND_REMAINING_GUIDE.txt  pyproject.toml  requirements.txt
.specify/: feature.json
cloud/: AZURE_ML_RUNBOOK.md  INSTRUCTIONS.md  download_cityscapes.sh  download_gta5.ps1  download_gta5.sh  download_gta5_parallel.sh  node_boot_recover.sh  prepare_data.sh  run_phase8.sh  run_phase9.sh  setup.sh
cold-email-tracking/: TRACKING.md  cold-email-prompt.md  emails-compiled.md  research-proposal.md
configs/: baseline_mean_teacher.yaml  default.yaml  satg_hard.yaml  satg_soft_label.yaml  satg_soft_weight.yaml  source_only.yaml
data/: __init__.py  augmentations.py  cityscapes_loader.py  gta5_loader.py  label_mapping.py  rare_class_sampling.py
docs/: data_loading_research.md  structural_cues_research.md
evaluation/: __init__.py  evaluator.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
models/: __init__.py  ema.py  segmentation.py
precompute/: __init__.py  compute_heatmaps.py  preprocess_gta5_labels.py
research-info/: 00-RULES.md  01-INTRODUCTION.md  02-METHOD.md  03-EXPERIMENTS.md  04-RESULTS.md  05-ANALYSIS.md  06-PLAN-EVOLUTION.md  07-KNOWLEDGE-LOG.md  INDEX.md
satg/: __init__.py  losses.py  soft_label.py  structural_prior.py  trust_gate.py
tests/: __init__.py  conftest.py  test_augmentations.py  test_configs.py  test_data_leakage.py  test_data_loaders.py  test_ema.py  test_losses.py  (+9 more)
(+26 files in other folders)
