[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "satg"
version = "0.1.0"
description = "Structure-Aware Trust Gating for UDA Semantic Segmentation"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["satg", "models", "data", "training", "evaluation"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "coverage_html"
